yoshimi 1.5.11 M

2019-5-17 Will
* Started transfering Low prio and Loopback
  from control block parameter byte to source byte

2019-5-16 Will
* Added CLI access to extended modulator control.
* Added CLI access to Spot noise.
* Updated docs.

2019-5-12 Will
* Moved hidden filenames from globals to main.
  Only place they ever need to be identified.
* Moved instance start out of loop.
  Slightly improves timing.
* Added extra message when loading manual.
* Edited docs.
* Set release as 1.5.11
* Added missing Manual :(
* Set release as 1.5.11.1
* Merged in Foward commits.
* Made Instance control and Spot noise permanent.

2019-5-11 Will
* Further work to improve multi-instance.
* Additional changes to thread code.
  Also removed some poorly performing ideas.

2019-5-10 Will
* Final tweaks to code.
* Applied rough fix to startup overloads.
  Only applies to secondary instances.
* Updated docs for release.
* Updated meta-info.
* Set version as 1.5.11 rc4

2019-5-9 Will
* Added code to ensure hidden gui enable is in sync.
* Moved some mallocs to prevent memory leaks.
  Would only occur under abort conditions.

2019-5-8 Will
* Trial of startup display
  Currently disabled.
* Some cleanups.
* Corrected previous changelog message.
* Startup display now working.
* Set version as 1.5.11 rc3

2019-5-7 Will
* Further improvements to instance behaviour.
  Time delays are almost entirely due to GUI
  slow startup. This has been an issue for
  a very long time.
* Put Autostart back on direct call.
  Still problems with GUI when threaded.
* Set version as 1.5.11 rc2

2019-5-6 Will
* Improved new/multi instance behaviour.
  There is still an issue with the gui causing
  occasional crashes :(
* Set version as 1.5.11 rc1

2019-5-5 Will
* Completed padSynth parameter conversions.
* Enumerated history lists.
* Improved history list internal structures.
* Moved most additions from synthEngine to Interchange.
  This was done so that loading (say) a state file