@@ -124,8 +124,8 @@ void collect_data(SynthEngine *synth, float value, unsigned char action, unsigne
     type |= typetop;
 
     putData.data.type = type | TOPLEVEL::source::GUI;
-    if (parameter != UNUSED && (parameter & 192))
-        action |= (parameter & 192); // transfer low prio and loopback
+    if (parameter != UNUSED && (parameter & TOPLEVEL::action::lowPrio))
+        action |= (parameter & TOPLEVEL::action::muteAndLoop); // transfer low prio and loopback
     putData.data.source = TOPLEVEL::action:: fromGUI | action;
 //cout << "collect_data value " << value << "  action " << int(action)  << "  type " << int(type) << "  control " << int(control) << "  part " << int(part) << "  kit " << int(kititem) << "  engine " << int(engine) << "  insert " << int(insert)  << "  par " << int(parameter) << " par2 " << int(par2) << endl;
     if (!synth->interchange.fromGUI->write(putData.bytes))
